--- a/src/assets/scss/base/base.scss
+++ b/src/assets/scss/base/base.scss
@@ -44,3 +44,9 @@ picture{
     margin-top: 0.2rem;
     font-size: 0.8em;
 }
+.fade-enter-active, .fade-leave-active {
+    transition: opacity .5s;
+  }
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+    opacity: 0;
+}
